[gd_scene load_steps=41 format=2]

[ext_resource path="res://characters/Zee2.gd" type="Script" id=1]
[ext_resource path="res://characters/sprites/Zee/zee_idle_walk.png" type="Texture" id=2]
[ext_resource path="res://characters/sprites/Zee/zee_straight_jump.png" type="Texture" id=3]
[ext_resource path="res://characters/sprites/Zee/zee_double_jump.png" type="Texture" id=4]
[ext_resource path="res://characters/sprites/Zee/zee_fall.png" type="Texture" id=5]
[ext_resource path="res://characters/sprites/Zee/zee_crouch.png" type="Texture" id=6]
[ext_resource path="res://characters/sprites/Zee/zee_punch_v2.png" type="Texture" id=7]
[ext_resource path="res://game/Camera.tscn" type="PackedScene" id=8]
[ext_resource path="res://characters/ZeeSM.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 900, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1350, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1800, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 2250, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1350, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2250, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3150, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 4050, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 4950, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 5850, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 6750, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 7650, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1350, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1800, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2250, 0, 450, 450 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2700, 0, 450, 450 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "punch",
"speed": 15.0
}, {
"frames": [  ],
"loop": false,
"name": "long_jump",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "straight_jump",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "double_jump",
"speed": 35.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "fall",
"speed": 1.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 26.2174, 66.2509 )

[sub_resource type="CapsuleShape2D" id=30]
radius = 53.3571
height = 129.131

[sub_resource type="CircleShape2D" id=31]
radius = 27.0046

[node name="Zee2" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 28 )
animation = "idle"

[node name="collision_box" type="CollisionShape2D" parent="."]
position = Vector2( -1.87289, 3.28711 )
shape = SubResource( 29 )

[node name="punch_hitbox" type="Area2D" parent="." groups=[
"enemy_damager",
]]
scale = Vector2( 0.5, 0.5 )

[node name="shape" type="CollisionShape2D" parent="punch_hitbox"]
position = Vector2( 127.57, -28.0752 )
rotation = 1.62106
shape = SubResource( 30 )
disabled = true

[node name="hurtbox" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( -0.648651, -6.81618 )
shape = SubResource( 31 )

[node name="Camera" parent="." instance=ExtResource( 8 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 9 )

[connection signal="area_entered" from="punch_hitbox" to="." method="_on_punch_hitbox_area_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
